@@ -1,7 +1,7 @@
+<!doctype html>
 <h1>Long Polling Demo</h1>
-<p>Showing maximum 10 lines when the time reaches a value where <i>hours+minutes+seconds</i> is a prime number:</p>
+<p>Showing maximum 10 lines when the time reaches a value where <i>hours+minutes+seconds</i> is a prime number:
+<br />(<a href="ES.xxm">Click here</a> for an EventSource version.)</p>
 [[
 
-(Context as IXxmContextSuspend).Suspend('demo11',250,1000,'Next.xxmi',1,'Drop.xxmi',1);
-
-]]
+(Context as IXxmContextSuspend).Suspend('demo12',250,1000,'Next.xxmi',1,'Drop.xxmi',1);
