@@ -20,7 +20,7 @@ and implement <code>IXxmProjectEvents2</code> to get <code>CheckEvent</code> cal
 <dl>
 <dt>Web.xxmp</dt>
 <dd>The project file, contains an internal list of the files of the project, and other data about the project.<br />
-Use xxmProject.exe to edit and manage project settings.</dd>
+Use <i>xxmProject.exe</i> to edit and manage project settings.</dd>
 <dt>xxmp.pas</dt>
 <dd>The project's main unit. When this file is missing form the project, xxm creates one for you.<br />
 Here, <code>TXxmdemo</code> implements <code>IXxmProjectEvents2</code> to perform the checks when to resume suspended contexts.</dd>
@@ -30,4 +30,12 @@ Here, <code>TXxmdemo</code> implements <code>IXxmProjectEvents2</code> to perfor
 <dd>Is used by the suspend call to include when <code>CheckEvent</code> returns true. Shows information about the event and suspends the context again, up till the tenth call.</dd>
 <dt>Drop.xxmi</dt>
 <dd>Is included when the context was suspended for longer than the specified maximum interval without <code>CheckEvent</code> returning true.</dd>
+<dt>ES.xxm</dt>
+<dd>Similar to <i>Default.xxm</i> but uses an <code>EventSource</code> object (if your browser supports this) to process a <code>text/event-stream</code> request.</dd>
+<dt>ES1.xxm</dt>
+<dd>The end-point for <code>EventSource</code>, sets the content type to <code>text/event-stream</code> format, then suspends the context.</dd>
+<dt>ES2.xxmi</dt>
+<dd>Similar to <i>Next.xxmi</i>, but offers data in <code>text/event-stream</code> format.</dd>
+<dt>ES3.xxmi</dt>
+<dd>Similar to <i>Drop.xxmi</i>, but offers data in <code>text/event-stream</code> format.</dd>
 </dl>
