@@ -115,3 +115,18 @@ Build=414
 Debug=0
 PreRelease=0
 Special=0
+Private=0
+DLL=0
+Locale=1033
+CodePage=1252
+[Version Info Keys]
+CompanyName=
+FileDescription=xxm Http Server (AutoBuild)
+FileVersion=1.2.4.414
+InternalName=
+LegalCopyright=
+LegalTrademarks=
+OriginalFilename=
+ProductName=xxm
+ProductVersion=1.0.0.0
+Comments=http://yoy.be/xxm/
